done upload server list
